Fix alignment of action costs

--- a/src/components/CapabilityDisplay/CapabilityDisplay.module.scss
+++ b/src/components/CapabilityDisplay/CapabilityDisplay.module.scss
@@ -31,8 +31,6 @@
 }
 
 .actionIcon {
-  position: relative;
-  top: -0.1em;
   margin-right: 0.5ch;
   height: 1.2em;
 }
